# storm-tape

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.md  _CMakeUserPresets.json  archive_info.json  archive_response.cpp  archive_response.hpp  cancel_request.json  cancel_response.cpp  configuration.hpp  database.hpp  delete_response.cpp  delete_response.hpp  file.hpp  io.cpp  io.hpp  main.cpp  release_response.cpp  release_response.hpp  requests_with_paths.hpp  routes.cpp  routes.hpp  stage_request.cpp  stage_request.hpp  stage_request.json  stage_response.cpp  stage_response.hpp  status_response.cpp  status_response.hpp  tape_api.cpp  tape_api.hpp  tape_response.cpp  tape_response.hpp  tape_service.cpp  tape_service.hpp  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/base-scripts/: install-vcpkg.sh  reinstall-cmake.sh
.devcontainer/library-scripts/: provide-cmake.sh  provide-deps.sh  provide-user.sh  scl_enable
.github/workflows/: ci.yml  codeql.yml
cmake/: lint-targets.cmake  lint.cmake  version.cmake
deployment/: README.md
deployment/kafka/: filebeat.yml
docker/: Dockerfile  compile_src.sh  test_script.sh
docker/library-scripts/: provide-deps.sh  provide-user.sh
example/: cancel_request.json
src/: access_logger.cpp  access_logger.hpp  app.hpp  archive_response.cpp  archive_response.hpp  archiveinfo_response.cpp  archiveinfo_response.hpp  cancel_response.cpp  cancel_response.hpp  configuration.cpp  configuration.hpp  database.hpp  database_soci.cpp  database_soci.hpp  delete_response.cpp  delete_response.hpp  errors.hpp  extended_attributes.cpp  extended_attributes.hpp  file.cpp  file.hpp  fs_storage_test.hpp  in_progress_request.hpp  in_progress_response.cpp  in_progress_response.hpp  io.cpp  io.hpp  local_storage.cpp  local_storage.hpp  main.cpp  profiler.cpp  profiler.hpp  readytakeover_response.hpp  release_response.cpp  release_response.hpp  requests_with_paths.cpp  requests_with_paths.hpp  routes.cpp  routes.hpp  sql_queries.hpp  (+16 more)
test/: test_script.sh
tests/: CMakeLists.txt  all.t.cpp  configuration.t.cpp  errors.t.cpp  fixture.t.cpp  fixture.t.hpp  io.t.cpp  stage_request.t.cpp  storage_area_resolver.t.cpp  tape_service.t.cpp
